--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>smitty</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Browser</title>
-</head>
-
-<body>
+  <body>
+  
   <h1>
-   smitty
+  smitty.com
   </h1>
-  <p>
-   welcome to my freaking site 
-  </p>
-  <script src="script.js"></script>
-</body>
+  
+   <!-- Caution Tape Divider -->
+    <div class="caution-tape"></div>
+    
 
+    <p>visit back later !<br />この愚かな猿を見よ！</p>
+
+    <!-- monke -->
+    <img id="floating-image" src="https://cdn.imgchest.com/files/yd5ce9l2zn4.gif" alt="monke" />
+
+    <script src="script.js"></script>
+  </body>
 </html>
