--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>visit back later !<br />この愚かな猿を見よ！</p>
 
     <!-- monke -->
-    <img id="floating-image" src="https://cdn.imgchest.com/files/yd5ce9l2zn4.gif" alt="monke" />
+    <img id="floating-image" src="media/monke.gif" alt="monke" />
 
     <script src="script.js"></script>
   </body>
