--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   </head>
 
   <body>
-  
-  <h1>
-  smitty
-  </h1>
-  
-   <!-- Caution Tape Divider -->
+    <!-- Preload the audio file -->
+    <audio id="sound" preload="auto">
+      <source src="media/ow.wav" type="audio/wav" />
+    </audio>
+
+    <h1>smitty</h1>
+    
+    <!-- Caution Tape Divider -->
     <div class="caution-tape"></div>
     
-
-    <p>visit back later !<br />この愚かな猿を見よ！</p>
+    <p>visit back later!<br />この愚かな猿を見よ！</p>
 
     <!-- monke -->
-    <img id="monke" src="media/monke.gif" alt="monke" />
+    <img id="monke" src="your-image-url.gif" alt="monkey" />
 
     <script src="script.js"></script>
   </body>
