--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ia<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -21,7 +21,7 @@
     <p>visit back later!<br />この愚かな猿を見よ！</p>
 
     <!-- monke -->
-    <img id="monke" src="your-image-url.gif" alt="monkey" />
+    <img id="monke" src="media/monke.gif" alt="monkey" />
 
     <script src="script.js"></script>
   </body>
